# mesh-skills

./: .gitignore  CLAUDE.md  ONBOARD.md  README.md  plan.md  pyproject.toml  spec.md
docs/superpowers/specs/: 2026-05-01-multipart-trajectory-design.md
plans/: 01-v0-tdd-build.md  02-recursive-summarization.md  03-hierarchical-summarization.md  04-launch-readiness.md  05-multipart-trajectory.md  06-onboarding-leniency.md  07-model-routing-config.md  07-report-issue-action.md  08-report-issue-action.md  09-coherent-synthesis-with-summary.md
scripts/: grant_mesh_data_access.sh
skills/: mesh-orchestrator  mesh-trajectory
skills/mesh_orchestrator/: SKILL.md
skills/mesh_orchestrator/prompts/: compose.md
skills/mesh_orchestrator/scripts/: load_users.py  parse_response.py  write_invites.py
skills/mesh_trajectory/: SKILL.md  pii_stoplist.txt  schema.py
skills/mesh_trajectory/config/: model_routing.yaml
skills/mesh_trajectory/prompts/: lint_body.md  per_project.md  per_session.md  summarize.md
skills/mesh_trajectory/prompts/sections/: long_term_background.md  recent_months.md  synthesize_coherent.md  top_of_mind.md  work_context.md
skills/mesh_trajectory/scripts/: extract.py  lint_body.py  model_routing.py  push.py  render_invite.py  validate.py
tests/: test_extract.py  test_lint_body.py  test_load_users.py  test_model_routing.py  test_parse_response.py  test_push.py  test_render_invite.py  test_schema.py  test_validate.py  test_write_invites.py
tests/fixtures/: user_v1_legacy.md  user_v2_valid.md  user_v3_valid.md
